# spoa-mirror

./: .gitignore  Dockerfile  Makefile.am  NEWS  README  configure.ac
contrib/doc/: SPOE.txt  configuration.txt
contrib/spoa_example/include/: mini-clist.h
doc/: spoe.cfg
include/: include.h
include/common/: debug.h  define.h  mini-clist.h  spoe.h  version.h.in
include/proto/: curl.h  libev.h  spoa-message.h  spoa.h  spoe-decode.h  spoe-encode.h  spoe.h  spop-ack.h  spop-disconnect.h  spop-hello.h  spop-notify.h  spop-unset.h  tcp.h  util.h  worker.h
include/types/: curl.h  libev.h  main.h  spoa-message.h  spoa.h  spoe-decode.h  spoe-encode.h  spoe.h  tcp.h  util.h  worker.h
m4/: am-common.m4  am-enable-threads.m4  am-host.m4  am-with-curl.m4  am-with-libev.m4
m4/pkgconfig/: am-with-curl.m4
scripts/: bootstrap  build-counter  distclean
src/: Makefile.am  curl.c  libev.c  main.c  spoa-message.c  spoa.c  spoe-decode.c  spoe-encode.c  spoe.c  spop-ack.c  spop-disconnect.c  spop-hello.c  spop-notify.c  spop-unset.c  tcp.c  util.c  worker.c
test/: get-absolute-uri.sh  haproxy-htx.cfg  haproxy-mw.cfg  haproxy-ssl.cfg  haproxy.cfg  spoe.cfg  ssl-cert.pem
test/debug/: haproxy-mw.cfg  haproxy-ssl.cfg  haproxy.cfg  spoe.cfg
util/: Makefile.am  README  decode-data.c  decode-data.h  test.sh  util.c  util.h
